README edited online with Bitbucket

--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 ##Simple ES6 Example for Appcelerator.
 
 ----------------------------------
-##ES6 Elements Used:
+###ES6 Elements Used:
 
 * Fat arrow functions
 * Classes
