README edited online with Bitbucket

--- a/README
+++ b/README
@@ -8,4 +8,4 @@
 * Inheritance
 * Template Literals
 
-![Screen Shot](screenshot.png)
+![Screen Shot](/tst-innovation-lab/es6project/src/master/screenshot.png)
